Add function to remove announcements
- Changes in NotificationSlashCommandEvents.java
- Add new strings in notification localization data